--- a/app/views/bargains/show.html.erb
+++ b/app/views/bargains/show.html.erb
@@ -7,7 +7,7 @@
     <div class="wrap">
     <div class="oh_menu">
       <%= render 'shared/header_amazon' %>  
-      <%= render 'shared/hotpro_header' %>
+      <%= render 'deals/header_featured' %> 
       <%= render 'shared/botton_amz' %>
     </div>
     
