--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -179,26 +179,28 @@
 .more_search{margin-top:15px;}
 .more_search input{width:35%;height:40px;padding:0 10px;}
 
-.deals_card{float:left;font-family:'Raleway', Arial, sans-serif;position:relative;overflow:hidden;margin:1%;width:23%;background:#fff;text-align:left;color:#000000;box-shadow:0 0 5px rgba(0, 0, 0, 0.15);font-size:16px;-webkit-transform:translateZ(0);transform:translateZ(0);-webkit-perspective:20em;perspective:20em;}
+.deals_card{float:left;font-family:'Raleway', Arial, sans-serif;position:relative;overflow:hidden;margin:1%;width:23%;height:340px;background:#fff;text-align:left;color:#000000;box-shadow:0 0 5px rgba(0, 0, 0, 0.15);font-size:16px;-webkit-transform:translateZ(0);transform:translateZ(0);-webkit-perspective:20em;perspective:20em;}
 .deals_card *{-webkit-box-sizing:border-box;box-sizing:border-box;-webkit-transition:all 0.3s ease-out;transition:all 0.3s ease-out;}
 .deals_card .image_box{width:100%;height:250px;padding:25px 25px 10px 25px;position:relative;}
 .deals_card .image_box .mark{position:absolute;top:5px;left:5px;background:#000;color:#fff;width:60px;height:40px;padding:7px;line-height:1.1;font-size:13px;text-align:center;border-radius:10px;}
+.deals_card .image_box .for_cou{width:85px;}
+.deals_card .image_box .for_cou_end{width:95px;}
 .deals_card .image_box .mark span{letter-spacing:1px;}
 .deals_card .image_box .mark span.wcou_01{font-size:11px;}
 .deals_card .image_box .mark em{display:block;letter-spacing:1px;}
 .deals_card .image_box .mark em.wcoup{font-size:10px;letter-spacing:0.5px;}
 .deals_card .image_box .dropped{top:55px;}
 .deals_card .image_box .dropped em{font-size:10px;}
-.deals_card .image_box .term{width:70px;height:42px;/*background:#ff0000;*/}
+.deals_card .image_box .term{width:70px;height:40px;}
 .deals_card .image_box .term p{margin-top:7px;font-size:11px;}
+.deals_card .image_box .expried{-webkit-filter:grayscale(100%);filter:gray;height:100%;}
 .deals_card .image_box .exprie{background:#ff4d4d;}
-.deals_card .image_box .endtoday{background:#ffa500;width:55px;position:absolute;top:5px;left:52px;}
-.deals_card .image_box .wcoupon{background:#87c442;}
+.deals_card .image_box .endtoday{background:#ffa500;width:55px;position:absolute;top:5px;left:85px;}
+.deals_card .image_box .wcoupon{background:#87c442;left:56px;}
 .deals_card .image_box .wcp{top:50px;}
 .deals_card .image_box .endtoday p{margin:0;height:auto;}
-.deals_card .image_box .expried{-webkit-filter: grayscale(100%);filter: gray;height:100%;}
 .deals_card img{width:70%;height:70%;object-fit:contain;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);object-fit:contain;}
-.deals_card .buy-now{z-index:100;position:absolute;top:0;right:0;padding:0px 15px;color:#fff;font-weight:700;font-size:20px;opacity:0;background-color:#000;-webkit-transform:rotateX(-90deg);transform:rotateX(-90deg);-webkit-transform-origin:100% 0;-ms-transform-origin:100% 0;transform-origin:100% 0;}
+.deals_card .buy-now{z-index:100;position:absolute;top:0;right:0;padding:0px 15px;color:#fff;font-weight:700;font-size:15px;opacity:0;background-color:#000;-webkit-transform:rotateX(-90deg);transform:rotateX(-90deg);-webkit-transform-origin:100% 0;-ms-transform-origin:100% 0;transform-origin:100% 0;}
 .deals_card .buy-now span{}
 .deals_card .buy-now span a{text-decoration:none;color:#fff;}
 .deals_card .buy_now{z-index:20;}
@@ -211,11 +213,14 @@
 .deals_card p em{color:#fff;background:#08f;font-size:10px;padding:2px 5px;margin-right:7px;border-radius:7px;font-weight:bold;}
 .deals_card .price{font-weight:500;font-size:17px;line-height:30px;letter-spacing:1px;}
 .deals_card .price em{margin-right:5px;opacity:0.5;font-size:0.9em;text-decoration:line-through;}
+.deals_card .price .extra{font-size:11px;color:#08f;margin-top:-10px;}
 .deals_card a.btn{position:absolute;top:0;bottom:0;left:0;right:0;}
 .deals_card .m_btn{display:none;background:#000;padding:5px;text-align:center;}
 .deals_card .m_btn a{text-decoration:none;color:#fff;}
 .deals_card:hover .buy-now,
 .deals_card:hover .buy-now {opacity:1;-webkit-transform:rotateX(0deg);transform:rotateX(0deg);}
+.deals_card .admin{position:absolute;bottom:88px;left:20px;font-size:11px;}
+.deals_card .admin a{color:#616161;}
 /* Store Station Page "/deals/stores */
 .deals_card p.store_title{height:2.8em;-webkit-line-clamp:2;font-size:13px;}
 .deal_stores .image_box{height:200px;}
@@ -233,13 +238,15 @@
 @media screen and (max-width:640px){
   .more_search{margin:10px 0;}
   .more_search input{width:100%;border:1px solid #ccc;border-radius:10px;}
-  .deals_card{width:48%;}
+  .deals_card{width:48%;height:300px;}
   .deals_card img{width:80%;height:80%;}
   .deals_card .buy-now{display:none;}
   .deals_card .image_box{height:200px;padding:20px;}
   .deals_card .image_box .expried_wrap .mark_expried{width:55px;height:30px;}
   .deals_card .image_box .mark_expried p{font-size:10px;font-weight:bold;}
-  .deals_card .image_box .mark{font-size:11px;font-weight:600;width:50px;padding:6px 0px;height:35px;}
+  .deals_card .image_box .mark{font-size:10px;font-weight:600;width:50px;padding:5px 0px;height:32px;}
+  .deals_card .image_box .for_cou{width:75px;}
+  .deals_card .image_box .for_cou_end{width:75px;}
   .deals_card .image_box .exprie p{margin-top:6px;}
   .deals_card .image_box .term p{font-size:10px;line-height:1.2;font-weight:bold;}
   .deals_card h3{font-size:14px;}
@@ -251,7 +258,9 @@
   .dealpage_title p{font-size:27.5px;}
   .dealpage_title p:after{display:none;}
   .deals__main_menu ul .nth_2 a:after{height:7px;top:67%;}
-  .deals_card .image_box .endtoday{width:50px;padding-top:6px;top:5px;left:60px;}
+  .deals_card .image_box .endtoday{width:50px;padding-top:6px;top:5px;left:70px;}
+  .deals_card .image_box .wcoupon{left:44px;}
+  /*.deals_card .image_box .end_p_m{bottom:0;left:0;}*/
   .deals_card .image_box .endtoday span{display:block;}
   /* Store Station Page "/deals/stores */
   .deals_card p.store_title{height:2.4em;}
