--- a/app/views/hotdeals/_form.html.erb
+++ b/app/views/hotdeals/_form.html.erb
@@ -17,7 +17,7 @@
       <%= f.input :h_link, label: 'Product URL' %>
       <%= f.input :h_title , label: 'Title Of Product' %>
       <%= f.input :h_spare_04, label: 'Image_Title' %>
-      <%= f.input :h_keyword, label: ', gadgets, amazon, recommended, under' %>
+      <!-- <%= f.input :h_keyword, label: ', gadgets, amazon, recommended, under' %> -->
       <%= f.input :h_spare_05, label: 'Hashtags' %>
       <!-- <%= f.input :h_spare_11, label: 'Korean Title' %>  -->
     </div>
@@ -27,13 +27,8 @@
       <!-- <%= f.input :h_percentage, label: 'Discount Percentage' %> -->
       <!-- <%= f.input :h_spare_63, label: 'Shipping Fee' %> -->
     
-      <!-- <p>(when we don't know sales of percentage)</p> -->
-      <!-- <div class="pricing clearfix"> -->
-      <!--<%= f.input :h_spare_43, label: 'Original Price' %>-->
-      <!--<%= f.input :h_spare_44, label: 'Current Price' %>-->
       <%= f.input :h_spare_08, label: 'Average Rate' %>
       <%= f.input :h_spare_09, label: 'Number of Reviews' %>
-      <!-- <%= f.input :h_spare_02, label: 'Coupon Deals?' %> -->
       <%= f.input :h_spare_61, label: 'Coupon(%)' %>
       <%= f.input :h_spare_62, label: 'Coupon($)' %>
       <%= f.input :h_spare_45, label: 'Last Discount Price' %>
