--- a/app/views/hotdeals/edit.html.erb
+++ b/app/views/hotdeals/edit.html.erb
@@ -21,22 +21,16 @@
           <%= f.input :h_link, label: 'Product URL' %>
           <%= f.input :h_title , label: 'Title Of Product' %>
           <%= f.input :h_spare_04, label: 'Image_Title' %>
-          <%= f.input :h_keyword, label: ' gadgets, amazon, recommended, under $ ' %>
+          <!-- <%= f.input :h_keyword, label: ' gadgets, amazon, recommended, under $ ' %> -->
           <%= f.input :h_spare_05, label: 'Hashtags' %>
           <!-- <%= f.input :h_spare_11, label: 'Korean Title' %>  -->
         </div>
         <div class="pricing stk clearfix">
-          <!--<%= f.input :h_spare_41, label: 'Original Price' %>-->
-          <!--<%= f.input :h_spare_42, label: 'Current Price' %>-->
           <%= f.input :h_spare_43, label: 'Original Price' %>
           <%= f.input :h_spare_44, label: 'Current Price' %>
           <!-- <%= f.input :h_percentage, label: 'Discount Percentage' %> -->
           <!-- <%= f.input :h_spare_63, label: 'Shipping Fee' %> -->
         
-          <!-- <p>(when we don't know sales of percentage)</p> -->
-          <!-- <div class="pricing clearfix"> -->
-          <!--<%= f.input :h_spare_43, label: 'Original Price' %>-->
-          <!--<%= f.input :h_spare_44, label: 'Current Price' %>-->
           <%= f.input :h_spare_08, label: 'Average Rate' %>
           <%= f.input :h_spare_09, label: 'Number of Reviews' %>
           <!-- <%= f.input :h_spare_02, label: 'Coupon Deals?' %> -->
