--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- <title>Oh,i gotta buy this - The Best Deals, Coupons &amp; Promo Codes</title> -->
     <%= display_meta_tags %>
     <meta charset="utf-8"/>
     <meta content="IE=edge, chrome=1" http-equiv="X-UA-Compatible">
