--- a/app/views/promocodes/_usa_kor.html.erb
+++ b/app/views/promocodes/_usa_kor.html.erb
@@ -64,7 +64,7 @@
     <div class="info_box">
       <span>
         <ul>
-          <% if @promocode.p_spare_10.present? %>         
+          <% if @promocode.p_spare_26 < 25.00 %>         
             <li>Get free shipping when you order $25+ of eligible items or Amazon Prime Members. <a target="_blank" href="/blogs/blog_01_amz_prime">What's Prime.<i></i></a></li>
           <% end %>
           <li>Average ratings and reviews may change after posting.</li>
@@ -258,7 +258,7 @@
         <div class="info_box">
           <span>
             <ul>
-              <li>The "Estimated Purchase Price" is for reference only. Please fully check the product detail on Amazon before purchasing. </li>
+              <li>"Estimated Purchase Price" is for reference only. Please fully check the product detail on Amazon before purchasing. </li>
             </ul>
           </span>
         </div>
