--- a/app/views/hotdeals/_form.html.erb
+++ b/app/views/hotdeals/_form.html.erb
@@ -9,7 +9,7 @@
     <!-- <%= f.select :h_spare_10, options_for_select([["Subscribe & Save?", ""], "Yes"])%> -->
     <!-- <%= f.select :h_spare_12, options_for_select([["No Tax?", ""], "Yes"])%> -->
     <!-- <%= f.select :h_spare_13, options_for_select([["Write Blog?", ""], "Yes"])%> -->
-    <%= f.select :h_spare_18, options_for_select([["Yes, It's Free shipping", ""], "No, It's not"]) %> <br /><br />
+    <!-- <%= f.select :h_spare_18, options_for_select([["Yes, It's Free shipping", ""], "No, It's not"]) %> <br /><br /> -->
     <!-- <%= f.select :h_spare_06, options_for_select([["Ship to Korea", ""], "Yes"])%>  -->
     
     <div class="basic_info">
@@ -53,7 +53,7 @@
     </div>
     <%= f.input :h_spare_92, label: '( US Time Zone )' %><br />
     <!-- <%= f.input :h_description, label: 'Description Of Product' %> -->
-    <%= f.input :h_spare_21, as: :trix_editor, label: 'Description Of Product with TRIX' %>
+    <!-- <%= f.input :h_spare_21, as: :trix_editor, label: 'Description Of Product with TRIX' %> -->
 
     <div class="form_btn"><%= f.button :submit %></div>
 
