--- a/app/views/hotdeals/_usa_kor.html.erb
+++ b/app/views/hotdeals/_usa_kor.html.erb
@@ -662,6 +662,11 @@
      <!-- <h6>If you purchase something through a post on our site, we may get a small commission of the sale.</h6> -->
     </div>
   </div>
+  <div class="sharing">
+    <!-- Go to www.addthis.com/dashboard to customize your tools -->
+    <div class="addthis_inline_share_toolbox_pf38"></div>
+  </div>
+            
 
   <%if @hotdeal.h_spare_21.present? %>
     <div class="trix trix-container gradient"><span>About the product</span><p><%= @hotdeal.h_spare_21.html_safe %></p><button class="show-btn fa fa-chevron-down"></button></div>
