--- a/app/views/hotdeals/edit.html.erb
+++ b/app/views/hotdeals/edit.html.erb
@@ -13,7 +13,7 @@
         <!-- <%= f.select :h_spare_12, ([["No Tax?", ""], "Yes"])%> -->
         <!-- <%= f.select :h_spare_13, ([["Write Blog?", ""], "Yes"])%> -->
         <!-- <%= f.select :h_spare_06, ([["Ship to Korea", ""], "Yes"])%> -->
-        <%= f.select :h_spare_18, ([["Yes, It's Free shipping", ""], "No, It's not"])%>
+        <!-- <%= f.select :h_spare_18, ([["Yes, It's Free shipping", ""], "No, It's not"])%> -->
         <div class="form_btn"><%= f.button :submit %></div><br />
         
         <div class="basic_info">
@@ -53,12 +53,12 @@
         </div> -->
 
         <div class="find_more">
-          <%= f.input :h_spare_14, label: 'Amazon Choice' %>
-          <%= f.input :h_spare_15, label: 'Amazon Choice Link' %>
+          <!-- <%= f.input :h_spare_14, label: 'Amazon Choice' %> -->
+          <!-- <%= f.input :h_spare_15, label: 'Amazon Choice Link' %> -->
         </div>
         <%= f.input :h_spare_92, label: '( US Time Zone )' %><br />
         <!-- <%= f.input :h_description, label: 'Description Of Product' %> -->
-        <%= f.input :h_spare_21, as: :trix_editor, label: 'Description Of Product with TRIX' %>
+        <!-- <%= f.input :h_spare_21, as: :trix_editor, label: 'Description Of Product with TRIX' %> -->
 
         <div class="form_btn"><%= f.button :submit %></div>
 
