--- a/app/views/marketing/bystore.html.erb
+++ b/app/views/marketing/bystore.html.erb
@@ -28,11 +28,11 @@
           <% @storepromotions.each do |storepromotion| %>
             <div class="all_box clearfix">
               <% if storepromotion.sp_store_name.present? %>
-                <p><%= storepromotion.sp_store_name %></p>
+                <p><%= storepromotion.sp_store_name %> -- <%= storepromotion.sp_title %></p>
               <% else %>
-                <p><%= storepromotion.spcategory.name %></p>
+                <p><%= storepromotion.spcategory.name %> -- <%= storepromotion.sp_title %></p>
               <% end %>
-              <p><%= storepromotion.sp_title %></p>
+              <!-- <p><%= storepromotion.sp_title %></p> -->
               <% if storepromotion.sp_spare_42.present? %>
                 <p class="h_price"><%= number_to_currency(storepromotion.sp_spare_43) %> <span class="span_01">( Was <%= number_to_currency(storepromotion.sp_spare_42) %> )</span><span class="span_02"></span></p>
               <% end %>
