--- a/app/views/promocodes/_usa_kor.html.erb
+++ b/app/views/promocodes/_usa_kor.html.erb
@@ -547,6 +547,10 @@
      </div> 
    </div>
   </div>
+  <div class="sharing">
+    <!-- Go to www.addthis.com/dashboard to customize your tools -->
+    <div class="addthis_inline_share_toolbox_pf38"></div>
+  </div>
 
   <% if @promocode.p_spare_36.present? %>
     <div class="trix trix-container gradient"><span>About the product</span><p><%= @promocode.p_spare_36.html_safe %></p><button class="show-btn fa fa-chevron-down"></button></div>
