--- a/app/views/promocodes/edit.html.erb
+++ b/app/views/promocodes/edit.html.erb
@@ -10,7 +10,7 @@
         <!-- <%= f.select :p_banner, ([["Do You Have A Banner?", ""], "YES"])%> -->
         <%= f.select :p_spare_02, ([["In Stock", ""], "Only in a few stock left"])%>
         <!-- <%= f.select :p_spare_05, ([["Subscribe & Save?", ""], "Yes"])%> -->
-        <%= f.select :p_spare_10, ([["Yes, It's Free shipping", ""], "No, It's not"]) %><br /><br />
+        <!-- <%= f.select :p_spare_10, ([["Yes, It's Free shipping", ""], "No, It's not"]) %><br /><br /> -->
         <!-- <%= f.select :p_spare_01, ([["Ship to Korea", ""], "Yes"])%> -->
         <div class="pricing clearfix">
           <%= f.input :p_spare_26, label: 'List Price' %>
@@ -56,7 +56,7 @@
         <%= f.input :p_spare_51, label: 'Ends Today' %><br />
         <%= f.input :p_spare_52, label: 'For New Sticker' %><br />
         <!-- <%= f.input :p_description, label: 'Description Of Product' %> -->
-        <%= f.input :p_spare_36, as: :trix_editor, label: 'Description Of Product with TRIX' %> 
+        <!-- <%= f.input :p_spare_36, as: :trix_editor, label: 'Description Of Product with TRIX' %>  -->
 
         <div class="form_btn"><%= f.button :submit %></div>
 
