--- a/app/views/spcategories/_body.html.erb
+++ b/app/views/spcategories/_body.html.erb
@@ -1,3 +1,4 @@
+<a href="/storepromotions">Back To Store Promotions</a>
 <h1 class="dealpage_title">Listing Spcategories | <%= link_to 'New Spcategory', new_spcategory_path %></h1>
 <table>
   <thead>
