--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -834,6 +834,26 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
 .amz_slider_banner .right{float:left;width:60%;}*/
 
 
+.index_featured{font-family: 'Montserrat', sans-serif;}
+.index_featured .in_card{float:left;width:23%;margin:1%;height:275px;margin-bottom:30px;}
+.index_featured .in_card .in_img_box{width:270px;height:250px;position:relative;}
+.index_featured .in_card .in_img_box img{width:100%;height:100%;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);object-fit:contain;}
+.index_featured .in_card .inner{}
+.index_featured .in_card .inner p{}
+.index_featured .in_card .inner p a{color:#000;}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
