--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -103,7 +103,7 @@
 .show_wrap .show_box .show_inner .hotdeal_inner .btn a{}
 .show_wrap .show_box .show_inner .hotdeal_inner .btn a em{;font-size:15px;color:#e47911;}
 .show_wrap .show_box .show_inner .hotdeal_inner p.sp_des{margin:0;}
-.show_wrap .show_box .show_inner .hotdeal_inner .store_info{margin-top:10px;}
+.show_wrap .show_box .show_inner .hotdeal_inner .store_info{margin:10px 0 30px 0;}
 .show_wrap .show_box .show_inner .hotdeal_inner .store_info em{color:#616161;font-size:12.5px;display:block;margin-bottom:7px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .store_info em span{text-transform:uppercase;font-weight:bold;}
 /*.show_wrap .show_box .hotdeal_img{position:relative;}*/
