--- a/app/views/promocodes/_form.html.erb
+++ b/app/views/promocodes/_form.html.erb
@@ -7,7 +7,7 @@
     <!-- <%= f.select :p_banner, options_for_select([["Do You Have A Banner?", ""], "YES"])%> -->
     <%= f.select :p_spare_02, options_for_select([["In Stock", ""], "Only in a few stocks left"])%>
     <!-- <%= f.select :p_spare_05, options_for_select([["Subscribe & Save?", ""], "Yes"])%> -->
-    <%= f.select :p_spare_10, options_for_select([["Yes, It's Free shipping", ""], "No, It's not"]) %><br /><br />
+    <!-- <%= f.select :p_spare_10, options_for_select([["Yes, It's Free shipping", ""], "No, It's not"]) %><br /><br /> -->
     <!-- <%= f.select :p_spare_01, options_for_select([["Ship to Korea", ""], "Yes"])%> -->
     <div class="pricing clearfix">
       <%= f.input :p_spare_26, label: 'List Price' %>
@@ -54,7 +54,7 @@
     <%= f.input :p_spare_52, label: 'For New Sticker' %><br />
 
     <!-- <%= f.input :p_description, label: 'Description Of Product' %> -->
-    <%= f.input :p_spare_36, as: :trix_editor, label: 'Description Of Product with TRIX' %>    
+    <!-- <%= f.input :p_spare_36, as: :trix_editor, label: 'Description Of Product with TRIX' %>     -->
 
     <div class="form_btn"><%= f.button :submit %></div>
 
