--- a/app/views/storepromotions/show.html.erb
+++ b/app/views/storepromotions/show.html.erb
@@ -152,10 +152,9 @@
                 <% end %>
               </div>
             </div>
-            <div class="sharing">
-              <!-- Go to www.addthis.com/dashboard to customize your tools -->
+            <!-- <div class="sharing">
                <div class="addthis_inline_share_toolbox_pf38"></div>
-            </div>
+            </div> -->
 
              <% if @storepromotion.sp_description.present? %>
              <div class="trix"><p><%= @storepromotion.sp_description.html_safe %></p></div>
