--- a/app/views/bargains/show.html.erb
+++ b/app/views/bargains/show.html.erb
@@ -55,10 +55,9 @@
           </ul>
 
           <div class="btn"><a target="_blank" href="<%= @bargain.bar_link %>">Shop Now</a></div>
-          <div class="sharing">
-            <!-- Go to www.addthis.com/dashboard to customize your tools -->
-          <div class="addthis_inline_share_toolbox_pf38"></div>
-  </div>
+          <!-- <div class="sharing">
+             <div class="addthis_inline_share_toolbox_pf38"></div>
+          </div> -->
         </div>
        
 
