--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,11 +37,8 @@
       gtag('config', 'UA-113637704-2');
     </script>
 
-    <!-- Go to www.addthis.com/dashboard to customize your tools --> 
-    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5e9ddc6637b84f94"></script>
-
-
-
+    
+    <!-- <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5e9ddc6637b84f94"></script> -->
 
 
   </head>
