--- a/app/assets/stylesheets/bargain.css
+++ b/app/assets/stylesheets/bargain.css
@@ -96,4 +96,5 @@
   .bargain_wrap .right .inner .contents span{font-size:17px;}
   .bargain_wrap .right .inner .contents em{font-size:17px;}
   .bargain_wrap .search_m{display:block;}
+  .bargain_wrap .right .image_box .just_text{font-size:18px;}
 }
