--- a/app/views/hotdeals/_usa_kor.html.erb
+++ b/app/views/hotdeals/_usa_kor.html.erb
@@ -150,11 +150,13 @@
     <div class="info_box clearfix">
       <span>
         <ul>
-          <% if @hotdeal.h_spare_44 < 25.00 %>
-            <li>Get free shipping when you order $25+ of eligible items or Amazon Prime Members. <a target="_blank" href="/blogs/blog_01_amz_prime">What's Prime.<i></i></a></li>
-            <!-- <li><a target="_blank" href="https://amzn.to/2uvHHM2">Take "Amazon Prime" to save Shipping and handling fee.</a><i></i></li>             -->
+          <% if @hotdeal.h_spare_44.present? %>
+            <% if @hotdeal.h_spare_44 < 25.00 %>
+              <li>Get free shipping when you order $25+ of eligible items or Amazon Prime Members. <a target="_blank" href="/blogs/blog_01_amz_prime">What's Prime.<i></i></a></li>
+              <!-- <li><a target="_blank" href="https://amzn.to/2uvHHM2">Take "Amazon Prime" to save Shipping and handling fee.</a><i></i></li>             -->
+            <% else %>
+            <% end %>
           <% else %>
-
           <% end %>
           <li>Average ratings and reviews may change after posting.</li>
         </ul>
