--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
     <meta name="naver-site-verification" content="d1e3464e5000afaeb30b5172c06c304ed28414b8"/>
     <link rel="shortcut icon" type="image/jpg" href="https://goo.gl/qBPfBM">
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">  
+    <link rel="alternate" hreflang="en-us" href="https://www.ohigottabuythis.net"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
