--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -38,18 +38,19 @@
           <p>We Discover the best deals and trending items</p>
         </div>
 
-        <div class="support">
-          <p>"Oh,igottabuythis" contains affiliate links, which means that if you click on one of the product links, we’ll receive a small commission. This help support us and allows to continue to find and share good prodcuts and deals. Thank you for the support!</p>
-        </div>
+      </div> -->
 
-      </div>
- -->
+      <!--  <div class="support">
+          <p>"Oh,igottabuythis" contains affiliate links, which means that if you click on one of the product links, we’ll receive a small commission. This helps support us and allows us sto continue to find and share good prodcuts and deals. Thank you for the support!</p>
+        </div> -->
+
+
       <div class="qna sections clearfix">
        <p class="bodyline">Q & A</p>
        <h3># What this website is?</h3>
        <p>It is discount platform but also trending item platform.<br />We just make your life easier. We offer a quick way to find the coolest items and the best deals and you'll find what you're looking for at a great price.</p>
        <h3># Do you actually sell products on this website?</h3>
-       <p>We do not sell any of the products here. We are simply linking to products you can find on other online stores like Amazon, Aliexpress, Walmart, Kickstarter, Indiegogo, etc… and we do not ship anything ourselves. We cannot assist you with your purchase orders.</p>
+       <p>We do not sell any of the products here. We are simply linking to products you can find in other online stores like Amazon, Aliexpress, Walmart, Kickstarter, Indiegogo, etc… and we do not ship anything ourselves. We cannot assist you with your purchase orders.</p>
        <!-- <p>Please remember that we are not an actual webstore. We do not sell anything ourselves, and we do not ship anything ourselves. We cannot assist you with your purchase orders, and we do not know if a product can be shipped internationally.</p> -->
        <h3># The product you're linking to is no longer available, or the link is broken?</h3>
        <p>Sometimes products will run out of stock or completely be removed from the websites. If you find something like that, please let us know which item it is, so we can update it. We would be much obliged.</p>
