--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,11 +1,9 @@
 <div class="layout"><!--layout-->
   <div class="wrap">
-    <%= render 'shared/header_short' %>
-
-    <div class="contact_form">
+    <!-- <div class="contact_form">
       <h1>Contact Us</h1>
       <p>Get a question? Get in touch with us!</p>
       <%= render 'form' %>
-    </div>
+    </div> -->
   </div>
 </div>
