--- a/app/views/hotdeals/_usa_kor.html.erb
+++ b/app/views/hotdeals/_usa_kor.html.erb
@@ -316,7 +316,7 @@
               <em class="total_p"><%= number_to_currency(estimated_us) %></em>
             <% else %>
               <% estimated_us = 0 %>
-              <% estimated_us = @hotdeal.h_spare_44.to_i - @hotdeal.h_spare_62.to_i %>
+              <% estimated_us = @hotdeal.h_spare_44 - @hotdeal.h_spare_62 %>
               <em class="total_p"><%= number_to_currency(estimated_us) %></em>
             <% end %>
           </div>
