--- a/app/views/deals/_set_search.html.erb
+++ b/app/views/deals/_set_search.html.erb
@@ -189,14 +189,14 @@
     
 
 
-    <a class="set_reset_m" href="/deals/quick_search">Reset</a>
+    <a class="set_reset_m" href="/deals/quicksearch">Reset</a>
 
   </div><!--option_wrap-->
 
   
   
   <div class="text-center">
-    <a class="set_reset" href="/deals/quick_search">Reset</a>
+    <a class="set_reset" href="/deals/quicksearch">Reset</a>
     <button class="search">Find Deals</button>
   </div>
 </div><!--set_search_box-->
