--- a/app/views/storepromotions/_index_02.html.erb
+++ b/app/views/storepromotions/_index_02.html.erb
@@ -109,7 +109,7 @@
               <% end %>
             </div>
 
-            <span><%= link_to storepromotion.sp_title, storepromotion %></p></span>
+            <span><%= link_to storepromotion.sp_title, storepromotion %></span>
             
             
             <% if storepromotion.sp_spare_40.present? || storepromotion.sp_spare_42.present? %>
