--- a/app/views/shared/_header_marketing.html.erb
+++ b/app/views/shared/_header_marketing.html.erb
@@ -2,6 +2,7 @@
   <ul>
     <li><a href="/marketing/insta">Instagram</a></li>
     <li><a href="/marketing/amz_deal_e">Amazon</a></li>
+    <li><a href="/marketing/featured">Featured</a></li>
     <li><a href="/marketing/bystore">Store Deals</a></li>
     <li><a href="/marketing/be_rich">Be Rich</a></li>
   </ul>
