add search condition

--- a/app/views/deals/_set_search.html.erb
+++ b/app/views/deals/_set_search.html.erb
@@ -15,6 +15,11 @@
       <input type="text" class="keyword" placeholder="Search Keyword" value="">
     </div>
 
+    <div class="keyword_box clearfix">
+      <p>Brand</p>
+      <input type="text" class="brand" placeholder="Brand Keyword" value="">
+    </div>
+
     <div class="pricing_box clearfix">
       <div class="price min">
         <p>Min Price</p>
