changed main page

--- a/app/views/shared/_new_header.html.erb
+++ b/app/views/shared/_new_header.html.erb
@@ -21,7 +21,7 @@
           <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/deals/quicksearch">Bargain</a></li>
-            <li><a href="/gadgets">Gadgets</a></li>
+            <!-- <li><a href="/gadgets">Gadgets</a></li> -->
             <li><a href="/recommends">Featured</a></li>
           </ul>
         </div>
