--- a/app/views/deals/_header_store.html.erb
+++ b/app/views/deals/_header_store.html.erb
@@ -4,7 +4,7 @@
     <div class="sub_nav_pc">
       <ul class="clearfix">
         <!-- <li><a href="/deals/stores">Home</a></li> -->
-        <li class="coumos1"><a href="/storepromotions">Today's Discovery</a></li>
+        <!-- <li class="coumos1"><a href="/storepromotions">Today's Discovery</a></li> -->
         <li><a href="/deals/storesales">Sale & Clearance</a></li>
         <li><a href="/deals/storecoupons">Coupons & Promotions</a></li>
         <li><a href="/deals/storedealoftheday">Deal Of The Day</a></li>
