--- a/app/views/recommends/_body_show.html.erb
+++ b/app/views/recommends/_body_show.html.erb
@@ -1,8 +1,7 @@
 <div class="recommend_location guide_location clearfix">
  <ul>
     <li><a href="/">Home <em>/</em></a></li>
-    <li><a href="/recommends">Featured <em>/</em></a></li>
-    <li><a href="/recommends">Editor's Pick </a></li>
+    <li><a href="/recommends">Editor's Pick  <em>/</em></a></li>
   </ul>
 </div>
 <div class="detitle">
