--- a/app/views/shared/_botton_store.html.erb
+++ b/app/views/shared/_botton_store.html.erb
@@ -1,5 +1,5 @@
 <div class="botton_m clearfix">
-  <a href="/storepromotions"><img src="<%=asset_path 'ui_discovery.png' %>" alt="Today's Discovery" /></a>
+  <!-- <a href="/storepromotions"><img src="<%=asset_path 'ui_discovery.png' %>" alt="Today's Discovery" /></a> -->
   <a href="/deals/storesales"><img src="<%=asset_path 'ui_sale.png' %>" alt="Amazon Sale" /></a>
   <a href="/deals/storecoupons"><img src="<%=asset_path 'ui_coupon.png' %>" alt="Amazon Coupon" /></a>
   <a href="/deals/storedealoftheday"><img src="<%=asset_path 'ui_dotd.png' %>" alt="Deal Of The Day" /></a>
