--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -3,7 +3,7 @@
     <div class="wrap">
       <div class="deals_main_menu clearfix">
         <ul>
-          <li class="nth_1"><a href="">Categories <!-- <span>|</span> --> </a></li>
+          <li class="nth_1"><a href="">Categories. <!-- <span>|</span> --> </a></li>
           <!-- <li class="nth_2"><a href="">Discover more deals</a></li> -->
         </ul>    
       </div>
