--- a/app/views/hotdeals/edit.html.erb
+++ b/app/views/hotdeals/edit.html.erb
@@ -58,7 +58,7 @@
         </div>
         <%= f.input :h_spare_92, label: '( US Time Zone )' %><br />
         <!-- <%= f.input :h_description, label: 'Description Of Product' %> -->
-        <!-- <%= f.input :h_spare_21, as: :trix_editor, label: 'Description Of Product with TRIX' %> -->
+        <%= f.input :h_spare_21, as: :trix_editor, label: 'Description Of Product with TRIX' %>
 
         <div class="form_btn"><%= f.button :submit %></div>
 
