--- a/app/views/promocodes/edit.html.erb
+++ b/app/views/promocodes/edit.html.erb
@@ -56,7 +56,7 @@
         <%= f.input :p_spare_51, label: 'Ends Today' %><br />
         <%= f.input :p_spare_52, label: 'For New Sticker' %><br />
         <!-- <%= f.input :p_description, label: 'Description Of Product' %> -->
-        <!-- <%= f.input :p_spare_36, as: :trix_editor, label: 'Description Of Product with TRIX' %>  -->
+        <%= f.input :p_spare_36, as: :trix_editor, label: 'Description Of Product with TRIX' %>
 
         <div class="form_btn"><%= f.button :submit %></div>
 
