--- a/app/views/marketing/featured.html.erb
+++ b/app/views/marketing/featured.html.erb
@@ -1,4 +1,4 @@
-<div class="layout"><!--layout-->
+<!-- <div class="layout">
   <% if can? :update, @hotdeal %>
     <div class="wrap">  
       <%= render 'shared/header_marketing' %>
@@ -18,8 +18,9 @@
           <hr>
           
        </div>
-    </div><!--./warp-->
+    </div>
   <% end %>
-</div><!--./layout-->
+</div>
 
 
+ -->
