--- a/app/views/marketing/amz_deal_e.html.erb
+++ b/app/views/marketing/amz_deal_e.html.erb
@@ -1,4 +1,4 @@
-<div class="layout"><!--layout-->
+<!-- <div class="layout">
   <% if can? :update, @hotdeal %>
     <div class="wrap">  
       <%= render 'shared/header_marketing' %>
@@ -46,8 +46,9 @@
           </div>
          </div>
        </div>
-    </div><!--./warp-->
+    </div>
   <% end %>
-</div><!--./layout-->
+</div>
 
 
+ -->
