--- a/app/views/promocodes/_usa_kor.html.erb
+++ b/app/views/promocodes/_usa_kor.html.erb
@@ -167,7 +167,7 @@
 
 
     <div class="block clearfix">
-        <div class="box">
+        <!-- <div class="box">
           <p>End Date</p>
           <em>
             <% if @promocode.p_end_date.present? %>
@@ -185,7 +185,7 @@
                    <% end %> 
                   <% end %>
                 <% end %>
-               <!-- </div> -->
+               
               <% else %>
                 <em class="end_date"><%= @promocode.p_end_date %></em>
               <% end %>
@@ -193,7 +193,7 @@
              <em class="end_soon">End Soon</em>
             <% end %>
           </em>
-        </div>
+        </div> -->
 
         <% if @promocode.p_spare_07.present? %>
           <div class="box">
